--- a/02_Assignment/index.html
+++ b/02_Assignment/index.html
@@ -3,113 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 02</title>
-  <style>
-
-      main {
-          width: 100%;
-          position: relative;
-          height: inherit;
- }
-     #main-header{
-       background-color: white;
-       width: 100%;
-       border-bottom:6px solid black;
-       position: absolute;
-       top: 0;
-
-     }
-     .ijse-logo{
-        top: 0;
-        left:0.1%;
-        position: absolute;
-     }
-
-      #navbar{
-          margin-top:10px;
-          float: right;
-      }
-
-      #navbar li{
-          display: inline;
-          padding: 15px 10px;
-          cursor: pointer;
-      }
-
-      #navbar a{
-          color: #100c0c;
-          text-decoration: none;
-          font-size: 18px;
-          font-weight:normal;
-          padding: 15px 10px;
-          cursor: pointer;
-
-      }
-
-      #sidebar{
-          background-color: #400080;
-          width: 174px;
-          height:102%;
-          top:65px;
-          position:absolute;
-          margin-top:0;
-
-     }
-
-
-      .sideNavBar a{
-          color:white;
-          text-decoration: none;
-          font-size: 18px;
-          font-weight:normal;
-          padding: 15px 10px;
-          cursor: pointer;
-          position: absolute;
-          left: 0;
-
-      }
-
-      .sideNavBar li{
-          display: block;
-          padding: 15px 10px;
-          cursor: pointer;
- }
-      .image div{
-
-          display:inline;
-          left:6.60%;
-          top:35px;
-          position: relative;
-
-      }
-
-
-
-      .para p{
-          color: #100c0c;
-          text-decoration: none;
-          font-size: 18px;
-          font-weight:normal;
-          cursor: pointer;
-          left: 156px;
-          width: 90%;
-          padding: 9px 39px;
-          top:80px;
-          box-sizing: border-box;
-          position: relative;
-
-      }
-      #footer p{
-          background-color: gray;
-          color: white;
-          text-align:center;
-          padding: 20px;
-          margin-top: 30px;
-          width: 100%;
-          position: absolute;
-      }
-
-
-  </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <main>
@@ -144,7 +38,7 @@
             <div class="imgBor"></div>
             <div><img src="assests/image/th.jpeg" width="390" height="390"></div>
             <div><img src="assests/image/istockphoto-1356364287-170667a.jpg" width="390" height="390"></div>
-            <div><img src="assests/image/th (1).jpeg" width="390" height="390"></div>
+            <div><img src="assests/image/th%20(1).jpeg" width="390" height="390"></div>
         </div>
     </section>
         <div class="para">
